@@ -1,6 +1,10 @@
 // $Id$
 // $Name$
 
+Image Picker  for D6 in DRUPAL-6--2, 20011-01-26
+------------------------------------
+by hutch, added gallery blocks
+
 Image Picker  for D6 in DRUPAL-6--2, 20011-01-24
 ------------------------------------
 by hutch, by hutch, fixed jpeg quality issue #1036216
